--- a/stat128p/stat128p.Rmd
+++ b/stat128p/stat128p.Rmd
@@ -1,12 +1,10 @@
 ---
 title: "Stat 128 Project R Notebook"
-output: html_notebook
 author: 'Dean Chiang'
+date: "April 22, 2019"
+output: html_notebook
 ---
 
-This is an [R Markdown](http://rmarkdown.rstudio.com) Notebook. When you execute code within the notebook, the results appear beneath the code. 
-
-Try executing this chunk by clicking the *Run* button within the chunk or by placing your cursor inside it and pressing *Cmd+Shift+Enter*. 
 
 # Stat 128 Spring 2019 Student Project Dchiang
 
@@ -27,10 +25,23 @@ Data source
 - [GeoJSON](https://opendata.arcgis.com/datasets/1df90a95e4c348f1bd06326fd96ced78_0.geojson)
 - Data downloaded as [csv](C:/Users/dchiang/Downloads/California_Fish_Passage_Assessment_Database_ds69.csv) and [shapefile](~/Downloads/California_Fish_Passage_Assessment_Database_ds69.zip)
 
+## Load the Data from the Internet
+```{r}
+biosds69 <- read.csv('https://opendata.arcgis.com/datasets/1df90a95e4c348f1bd06326fd96ced78_0.csv')
+View(biosds69)
+dim(biosds69)
+```
+
+## Download and Import Data File
 ```{r}
 library(readr)
-biosds69 <- read_csv("~/Downloads/biosds69.csv")
+# biosds69 <- read_csv("C:/Users/dchiang/Downloads/biosds69.csv")
 View(biosds69)
+
+```
+
+### Check the data
+```{r}
 class(biosds69)
 head(biosds69)
 tail(biosds69)
