--- a/stat128p/stat128p.Rmd
+++ b/stat128p/stat128p.Rmd
@@ -25,28 +25,30 @@ Data source
 - [GeoJSON](https://opendata.arcgis.com/datasets/1df90a95e4c348f1bd06326fd96ced78_0.geojson)
 - Data downloaded as [csv](C:/Users/dchiang/Downloads/California_Fish_Passage_Assessment_Database_ds69.csv) and [shapefile](~/Downloads/California_Fish_Passage_Assessment_Database_ds69.zip)
 
-## Load the Data from the Internet
+
+## Download and Import Data File
+```{r}
+library(readr)
+# biosds69 <- read_csv("C:/Users/dchiang/Downloads/biosds69.csv")
+# View(biosds69)
+```
+
+## Load the Data directly from the Internet
 ```{r}
 biosds69 <- read.csv('https://opendata.arcgis.com/datasets/1df90a95e4c348f1bd06326fd96ced78_0.csv')
 View(biosds69)
 dim(biosds69)
 ```
 
-## Download and Import Data File
-```{r}
-library(readr)
-# biosds69 <- read_csv("C:/Users/dchiang/Downloads/biosds69.csv")
-View(biosds69)
-
-```
-
-### Check the data
+## Check data
 ```{r}
 class(biosds69)
-head(biosds69)
-tail(biosds69)
 str(biosds69)
-summary(biosds69)
-dim(biosds69)
 ```
+
+### Data Summary
+```{r}
+summary(biosds69)
+```
+
 
